# GodotFairyGUI

./: .clang-format  .clang-tidy  .gitignore  BUILD.md  CMakeLists.txt  PLAN.md  README.md
.github/workflows/: build.yml
example/: project.godot
example/UIProject/.objs/: fonts.json
example/UIProject/settings/: Publish.json
example/addons/godot_fairygui/: godot_fairygui.gdextension  godot_fairygui.gdextension.uid  plugin.cfg
example/assets/ui/: Bag_atlas0.png.import  Bag_fui.bytes  Basics_atlas0.png.import  Basics_fui.bytes  Basics_gojg7u.wav.import  Basics_o4lt7w.wav.import  BundleUsage_atlas0.png.import  BundleUsage_fui.bytes  Cooldown_atlas0.png.import  Cooldown_fui.bytes  Curve_atlas0.png.import  Curve_fui.bytes  CutScene_atlas0.png.import  CutScene_fui.bytes  EmitNumbers_atlas0.png.import  EmitNumbers_fui.bytes  Emoji_atlas0.png.import  Emoji_fui.bytes  Extension_atlas0.png.import  Extension_fui.bytes  Filter_atlas0.png.import  Filter_fui.bytes  Gesture_fui.bytes  Guide_atlas0.png.import  Guide_fui.bytes  HeadBar_atlas0.png.import  HeadBar_fui.bytes  HitTest_atlas0.png.import  HitTest_fui.bytes  Joystick_atlas0.png.import  LoopList_atlas0.png.import  LoopList_fui.bytes  ModalWaiting_atlas0.png.import  ModalWaiting_fui.bytes  Model_atlas0.png.import  Model_fui.bytes  (+24 more)
example/scenes/: smoke_test.tscn
example/scripts/: example_base.gd  example_base.gd.uid  fairygui_panel.gd  fairygui_panel.gd.uid  main.gd  main.gd.orig  main.gd.tmp  main.gd.uid  orig_main.gd  smoke_runner.gd  smoke_runner.gd.uid
src/: register_types.cpp  register_types.h
src/runtime/: g_button.cpp  g_button.h  g_combo_box.cpp  g_combo_box.h  g_component.cpp  g_component.h  g_component_transition.cpp  g_graph.cpp  g_graph.h  g_image.cpp  g_image.h  g_label.cpp  g_label.h  g_list.cpp  g_list.h  g_list_scroll.cpp  g_loader.cpp  g_loader.h  g_movie_clip.cpp  g_movie_clip.h  g_object.cpp  g_object.h  g_progress_bar.cpp  g_progress_bar.h  g_root.cpp  g_root.h  g_scroll_bar.cpp  g_scroll_bar.h  g_slider.cpp  g_slider.h  g_text_field.cpp  g_text_field.h  g_text_input.cpp  g_text_input.h  g_tween.cpp  g_tween.h  g_tween_ease.cpp  ui_package.cpp  ui_package.h  ui_package_loader.cpp  (+2 more)
tools/: build_addon.py
(+454 files in other folders)
